# sessio

./: .gitignore  README.md  build_cross_images.sh  build_image.sh  gen_dart_proto.sh
coordinator-frontend/: .dockerignore  .env  Dockerfile  LICENSE  package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
coordinator-frontend/.react-router/types/: +routes.ts
coordinator-frontend/.react-router/types/app/routes/+types/: dashboard.ts  device_sign_finish.ts  device_sign_start.ts  login.ts  passkey_auth_start.ts  register.ts
coordinator-frontend/app/: app-theme.tsx  app.css  root.tsx  routes.ts
coordinator-frontend/app/components/: DeviceModals.tsx
coordinator-frontend/app/lib/: session.ts
coordinator-frontend/app/routes/: dashboard.tsx  device_sign_finish.tsx  device_sign_start.tsx  home.tsx  passkey_auth_start.tsx  passkey_register_start.tsx  site_layout.tsx
coordinator-frontend/app/routes/auth/: login.tsx  logout.tsx  register.tsx
coordinator-frontend/app/services/api/: client.ts  coordinator.ts  index.ts  types.ts
coordinator-frontend/app/utils/: auth-utils.ts  simplewebauthn.ts  test-render.tsx  webauthn.ts
docker/: Dockerfile_aarch64  Dockerfile_i686  Dockerfile_x86_64
packaging/: README.md  install-client.sh  install-server.sh  install.sh  script_consts.sh  sessio-coordinator.conf.dist  sessio-server.conf.dist
packaging/services/clientd/: service
packaging/services/coordinator/: service
packaging/services/server/: service
proto/: client_ipc.proto
rust/: .dockerignore  Cargo.toml  Cross.toml  build_binaries.sh  deploy_all.sh  openssl_building.md
rust/client/: Cargo.toml  build.rs  build_android_libs.sh
rust/client-cli/: Cargo.toml  build.rs
rust/client-cli/src/: main.rs
rust/client/src/: client.rs  config_manager.rs  ipc.rs  lib.rs  main.rs
rust/client/src/platform/: windows.rs
rust/common/: Cargo.toml
rust/common/src/utils/: config_types.rs  events.rs  file_manager.rs  ipv6.rs  keygen.rs  mod.rs  quinn_utils.rs  streams.rs
rust/coordinator/: .dockerignore  Cargo.toml  Dockerfile  build-images.sh  docker-compose.yml  nginx.conf
rust/coordinator-common/: Cargo.toml
rust/coordinator-common/src/: common.rs  coordinator_client.rs  holepuncher.rs  lib.rs
rust/coordinator/config/: coordinator.env
rust/coordinator/migrations/: 013_add_version_to_devices.sql
rust/coordinator/src/: common.rs  coordinator.rs  coordinator_client.rs  holepuncher.rs  lib.rs  main.rs  middleware.rs  models.rs
rust/coordinator/src/auth/: jwt.rs  mod.rs  webauthn.rs
rust/coordinator/src/db/: mod.rs  models.rs  repository.rs  schema.sql
rust/coordinator/src/handlers/: device.rs  mod.rs  session.rs  websocket.rs
rust/coordinator/test_certs/: cert.pem  cert.srl  key.pem  server.csr  server.key  server_cert.pem
rust/release/aarch64-unknown-linux-gnu/debian/: sessio-coordinator_0.3.1-1_arm64.deb  sessio-server_0.3.1-1_arm64.deb
rust/release/i686-unknown-linux-gnu/debian/: sessio-server_0.3.1-1_i386.deb
rust/release/x86_64-unknown-linux-gnu/debian/: sessio-clientd_0.3.1-1_amd64.deb  sessio-coordinator_0.3.1-1_amd64.deb  sessio-server_0.3.1-1_amd64.deb
rust/server/: Cargo.toml
rust/server/src/: config_manager.rs  main.rs  server.rs  sftp.rs
scripts/: install.sh  install_clientd.sh
scripts/server/: setup_linux.sh
ui/: README.md  build.gradle.kts  pubspec.yaml  settings.gradle.kts  start_adb.sh
ui/.fleet/: receipt.json
ui/android/: build.gradle
ui/android/app/: build.gradle
ui/android/app/src/main/: AndroidManifest.xml
ui/android/app/src/main/kotlin/com/example/sessio_ui/: MainActivity.kt
ui/composeApp/: build.gradle.kts
ui/composeApp/src/androidMain/: AndroidManifest.xml
ui/composeApp/src/androidMain/kotlin/net/c0ffee1/sessio/ui/: GrpcServer.kt  MainActivity.kt
ui/composeApp/src/androidMain/res/values/: strings.xml
ui/composeApp/src/commonMain/kotlin/: ANSIParser.kt  App.kt
ui/composeApp/src/desktopMain/kotlin/: main.kt
ui/gradle/: libs.versions.toml
ui/ios/Runner/: Info.plist
ui/ios/Runner.xcodeproj/: project.pbxproj
ui/lib/: grpc_service.dart  main.dart  states.dart
ui/lib/model/: sftp_state.dart  terminal_state.dart
ui/lib/model/sftp/: browser.dart  sftp.dart
ui/lib/view/: homepage.dart  mobile_keyboard.dart  settings_page.dart  sftp_browser.dart  terminal_session_view.dart
ui/linux/: CMakeLists.txt  my_application.cc
ui/macos/Flutter/: GeneratedPluginRegistrant.swift
ui/macos/Runner.xcodeproj/: project.pbxproj
ui/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
ui/macos/Runner/Configs/: AppInfo.xcconfig
ui/test/: widget_test.dart
ui/web/: index.html  manifest.json
ui/windows/: CMakeLists.txt
ui/windows/runner/: Runner.rc  main.cpp
