[workspace]
members = ["client", "server", "common", "coordinator", "coordinator-common", "client-cli"]
resolver = "2"

[workspace.package]
version = "0.4.1"
edition = "2021"
repository = "https://github.com/0xC0ffee1/sessio"

[workspace.dependencies]
homedir = "=0.3.3"
base64ct = "=1.6.0"
openssl = { version = "0.10.73", features = ["vendored"] }
