[package]
name = "sessio-clientd"
version.workspace = true
edition.workspace = true
authors = ["0xc0ffee1"]
description = "Client daemon for sessio"
license = "GPL-3.0-or-later"

[dependencies]
common = { path = "../common" }
sessio-coordinator-common = { path = "../coordinator-common" }
tokio = { version = "1.0", features = ["full"] }
quinn = "0.11.8"
russh = "0.53.0"
async-trait = "0.1.80"
env_logger = "0.10"
anyhow = "1.0.86"
log = "0.4"
chrono = "0.4"
homedir = "0.3.3"



clap = { version = "4.5.6", features = ["derive"] }
url = "2.5.0"
rustls = { version = "0.23.12", default-features = false }

log4rs = "1.2.0"
serde = "1.0.203"
crossterm = "0.27.0"
futures = "0.3.30"
bytes = "1.6.0"
serde_json = "1.0.118"
tonic = "0.11.0"
prost = "0.12"
android_logger = "0.10"
tokio-stream = { version = "0.1.15", features = ["net"] }
async-stream = "0.3.5"
russh-sftp = "2.0.3"
quinn-proto = "0.11.8"
ring = "0.17.8"
reqwest = { version = "0.11", features = ["json"] }
dirs = "5.0"


[target.'cfg(target_os="android")'.dependencies]
jni = { version = "0.5", default-features = false }


[target.'cfg(windows)'.dependencies]
uds_windows = "1.1.0"

futures-util = "0.3.30"

[dependencies.uuid]
version = "1.9.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[build-dependencies]
tonic-build = "0.11"


[lib]
name = "grpc_server"
crate-type = ["cdylib"]
