[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
quinn = "0.11.2"
log = "0.4"
rand = { version = "0.8", features = ["std"] }
ssh-key = { version = "0.6.6", features = ["ed25519"] }
russh = "0.44.1"
russh-keys = "0.44.0"

if-addrs = "0.13.1"
anyhow = "1.0.86"
homedir = "0.3.3"
