[package]
name = "common"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { version = "1.0", features = ["full"] }
quinn = { version = "0.11.8", default-features = false, features = ["runtime-tokio", "rustls", "ring", "log"] }
log = "0.4"
rand = { version = "0.8", features = ["std"] }
ssh-key = { version = "0.6.6", features = ["ed25519"] }
russh = "0.53.0"

if-addrs = "0.13.1"
anyhow = "1.0.86"
homedir = "0.3.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
url = "2.5"

ring = "0.17.8"
hex = "0.4.3"