[package]
name = "sessio-coordinator-common"
version.workspace = true
edition.workspace = true


[dependencies]
common = { path = "../common" }
tokio = { version = "1.0", features = ["full"] }

tokio-tungstenite = "0.21"

reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls-webpki-roots"] }

quinn = { version = "0.11.8", default-features = false, features = ["runtime-tokio", "rustls", "ring", "log"] }

anyhow = "1.0.86"
log = "0.4"
dirs = "5.0"

base64 = "0.21"

# WebAuthn dependencies
webauthn-rs = { version = "0.5", features = [ "danger-allow-state-serialisation", "danger-credential-internals", "conditional-ui"] }

url = "2.5.0"
# TLS dependencies removed - handled by reverse proxy in production

serde = "1.0.203"

serde_json = "1.0.118"
openssl = {workspace = true}
stunclient = { git = "https://github.com/vi/rust-stunclient" }
stun-client = "0.1.4"
futures = "0.3.30"
russh = "0.53.0"
uuid = { version = "1.0", features = ["v4"] }

# Cryptographic hashing for manual WebAuthn verification
sha2 = "0.10"
# ECDSA signature verification
p256 = "0.13"
