[package]
name = "coordinator"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
tokio = { version = "1.0", features = ["full"] }
quinn = { git = "https://github.com/0xC0ffee1/quinn.git", branch = "main", subdir = "quinn" }
tokio-util = { version = "0.6", features = ["io"] }
russh = { git = "https://github.com/0xC0ffee1/russh.git", branch = "main", subdir = "russh" }
russh-keys = { git = "https://github.com/0xC0ffee1/russh.git", branch = "main", subdir = "russh-keys" }
async-trait = "0.1.80"
env_logger = "0.10"
anyhow = "1.0.86"
log = "0.4"
rand = { version = "0.8", features = ["std"] }

clap = { version = "4.5.6", features = ["derive"] }
url = "2.5.0"
rustls = { version = "0.23.5", features = ["std"], default-features = false}
rustls-pemfile = "2.1.2"
rcgen = "0.12.1"

log4rs = "1.2.0"
serde = "1.0.203"
toml = "0.8.14"
bytes = "1.6.0"
serde_json = "1.0.118"
rustls-pki-types = "1.8.0"
quinn-proto = { git = "https://github.com/0xC0ffee1/quinn.git", branch = "main", subdir = "quinn-proto" }
webpki-roots = "0.26.3"
stunclient = { git = "https://github.com/vi/rust-stunclient" }
stun-client = "0.1.4"
futures = "0.3.30"

[dependencies.uuid]
version = "1.9.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
