[package]
name = "sessio-coordinator"
version = "0.3.1"
edition = "2021"
authors = ["0xc0ffee1"]
description = "Coordinator for sessio"
license = "GPL-3.0-or-later"


[package.metadata.generate-rpm]
assets = [
    # Install the binary
    { source = "target/release/sessio-coordinator", dest = "/usr/bin/sessio-coordinator", mode = "755" },

    # Install the systemd service file
    { source = "../packaging/services/coordinator/service", dest = "/usr/lib/systemd/system/sessio-coordinator.service", mode = "644" },


    # Install the server config
    { source = "../packaging/sessio-coordinator.conf.dist", dest = "/etc/sessio/coordinator.conf", mode = "644", config = "noreplace" },
]

requires = { systemd = "*" }

post_install_script = """
systemctl daemon-reload
systemctl enable sessio-coordinator.service
systemctl start sessio-coordinator.service
"""

pre_uninstall_script = """
systemctl stop sessio-coordinator.service
systemctl disable sessio-coordinator.service
"""

[package.metadata.deb]
assets = [
    # Install the binary
    ["target/release/sessio-coordinator", "usr/bin/sessio-coordinator", "755"],
]

systemd-units = { enable = true, start = true, restart-after-upgrade = true }
maintainer-scripts = "../../packaging/services/coordinator"

[dependencies]
common = { path = "../common" }
tokio = { version = "1.0", features = ["full"] }
quinn = "0.11.2"
tokio-util = { version = "0.6", features = ["io"] }
russh = "0.44.1"
russh-keys = "0.44.0"
async-trait = "0.1.80"
env_logger = "0.10"
anyhow = "1.0.86"
log = "0.4"
rand = { version = "0.8", features = ["std"] }

clap = { version = "4.5.6", features = ["derive"] }
url = "2.5.0"
rustls = { version = "0.23.5", features = ["std"], default-features = false }
rustls-pemfile = "2.1.2"
rcgen = "0.12.1"

log4rs = "1.2.0"
serde = "1.0.203"
toml = "0.8.14"
bytes = "1.6.0"
serde_json = "1.0.118"
rustls-pki-types = "1.8.0"
quinn-proto = "0.11.2"
webpki-roots = "0.26.3"
stunclient = { git = "https://github.com/vi/rust-stunclient" }
stun-client = "0.1.4"
futures = "0.3.30"

[dependencies.uuid]
version = "1.9.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
