[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
coordinator = { path = "../coordinator" }
tokio = { version = "1.0", features = ["full"] }
quinn = "0.11.3"
tokio-util = { version = "0.6", features = ["io"] }
russh = "0.44.0"
russh-keys = "0.44.0"
async-trait = "0.1.80"
env_logger = "0.10"
anyhow = "1.0.86"
log = "0.4"
rand = { version = "0.8", features = ["std"] }
ssh-key = { version = "0.6.6", features = ["ed25519"] }
portable-pty = "0.8.1"

clap = { version = "4.5.6", features = ["derive"] }
url = "2.5.0"
rustls = { version = "0.23.5", features = ["std"]}
rustls-pemfile = "2.1.2"
rcgen = "0.13"


log4rs = "1.2.0"
serde = "1.0.203"
toml = "0.8.14"
homedir = "0.3.3"

shell-escape = "0.1.5"

bytes = "1.6.0"
serde_json = "1.0.118"


tokio-stream = { version = "0.1.15", features = ["net"] }
futures-util = "0.3.30"
russh-sftp = "2.0.3"
if-addrs = "0.13.1"
shared_memory = "0.12.4"
raw_sync = "0.1.5"

[dependencies.uuid]
version = "1.9.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]


[build-dependencies]
tonic-build = "0.11"
