[package]
name = "sessio-server"
version.workspace = true
edition.workspace = true
authors = ["0xc0ffee1"]
description = "Server for sessio"
license = "GPL-3.0-or-later"

[dependencies]
common = { path = "../common" }
sessio-coordinator-common = { path = "../coordinator-common" }
tokio = { version = "1.0", features = ["full"] }
quinn = "0.11.8"
tokio-util = { version = "0.6", features = ["io"] }
russh = "0.53.0"
async-trait = "0.1.80"
env_logger = "0.10"
anyhow = "1.0.86"
log = "0.4"
rand = { version = "0.8", features = ["std"] }
portable-pty = "0.8.1"


clap = { version = "4.5.6", features = ["derive"] }
url = { version = "2.5.0", features = ["serde"] }
rustls = { version = "0.23.5", features = ["std"] }

rcgen = "0.13"


serde = "1.0.203"
toml = "0.8.14"
dirs = "5.0"
homedir = "0.3.3"


serde_json = "1.0.118"
reqwest = { version = "0.11", features = ["json"] }
base64 = "0.21"

russh-sftp = "2.0.3"

